APIs/googleapis.com/androidpublisher/v2/javascript-client/README.md
# google_play_developer

GooglePlayDeveloper - JavaScript client for google_play_developer
Accesses Android application developers' Google Play accounts.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: v2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install google_play_developer --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your google_play_developer from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var GooglePlayDeveloper = require('google_play_developer');

var defaultClient = GooglePlayDeveloper.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new GooglePlayDeveloper.EditsApi()
var packageName = "packageName_example"; // {String} Unique identifier for the Android app that is being updated; for example, \"com.spiffygame\".
var editId = "editId_example"; // {String} Unique identifier for this edit.
var apkVersionCode = 56; // {Number} The APK version code whose APK-specific listings should be read or modified.
var language = "language_example"; // {String} The language code (a BCP-47 language tag) of the APK-specific localized listing to read or modify. For example, to select Austrian German, pass \"de-AT\".
var opts = {
  'alt': "'json'", // {String} Data format for the response.
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} An opaque string that represents a user for quota purposes. Must not exceed 40 characters.
  'userIp': "userIp_example" // {String} Deprecated. Please use quotaUser instead.
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully.');
  }
};
api.androidpublisherEditsApklistingsDelete(packageName, editId, apkVersionCode, language, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/androidpublisher/v2/applications*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApklistingsDelete**](docs/EditsApi.md#androidpublisherEditsApklistingsDelete) | **DELETE** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApklistingsDeleteall**](docs/EditsApi.md#androidpublisherEditsApklistingsDeleteall) | **DELETE** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApklistingsGet**](docs/EditsApi.md#androidpublisherEditsApklistingsGet) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApklistingsList**](docs/EditsApi.md#androidpublisherEditsApklistingsList) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApklistingsPatch**](docs/EditsApi.md#androidpublisherEditsApklistingsPatch) | **PATCH** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApklistingsUpdate**](docs/EditsApi.md#androidpublisherEditsApklistingsUpdate) | **PUT** /{packageName}/edits/{editId}/apks/{apkVersionCode}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApksAddexternallyhosted**](docs/EditsApi.md#androidpublisherEditsApksAddexternallyhosted) | **POST** /{packageName}/edits/{editId}/apks/externallyHosted | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApksList**](docs/EditsApi.md#androidpublisherEditsApksList) | **GET** /{packageName}/edits/{editId}/apks | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsApksUpload**](docs/EditsApi.md#androidpublisherEditsApksUpload) | **POST** /{packageName}/edits/{editId}/apks | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsBundlesList**](docs/EditsApi.md#androidpublisherEditsBundlesList) | **GET** /{packageName}/edits/{editId}/bundles | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsBundlesUpload**](docs/EditsApi.md#androidpublisherEditsBundlesUpload) | **POST** /{packageName}/edits/{editId}/bundles | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsCommit**](docs/EditsApi.md#androidpublisherEditsCommit) | **POST** /{packageName}/edits/{editId}:commit | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsDelete**](docs/EditsApi.md#androidpublisherEditsDelete) | **DELETE** /{packageName}/edits/{editId} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsDeobfuscationfilesUpload**](docs/EditsApi.md#androidpublisherEditsDeobfuscationfilesUpload) | **POST** /{packageName}/edits/{editId}/apks/{apkVersionCode}/deobfuscationFiles/{deobfuscationFileType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsDetailsGet**](docs/EditsApi.md#androidpublisherEditsDetailsGet) | **GET** /{packageName}/edits/{editId}/details | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsDetailsPatch**](docs/EditsApi.md#androidpublisherEditsDetailsPatch) | **PATCH** /{packageName}/edits/{editId}/details | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsDetailsUpdate**](docs/EditsApi.md#androidpublisherEditsDetailsUpdate) | **PUT** /{packageName}/edits/{editId}/details | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsExpansionfilesGet**](docs/EditsApi.md#androidpublisherEditsExpansionfilesGet) | **GET** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsExpansionfilesPatch**](docs/EditsApi.md#androidpublisherEditsExpansionfilesPatch) | **PATCH** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsExpansionfilesUpdate**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpdate) | **PUT** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsExpansionfilesUpload**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpload) | **POST** /{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsGet**](docs/EditsApi.md#androidpublisherEditsGet) | **GET** /{packageName}/edits/{editId} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsImagesDelete**](docs/EditsApi.md#androidpublisherEditsImagesDelete) | **DELETE** /{packageName}/edits/{editId}/listings/{language}/{imageType}/{imageId} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsImagesDeleteall**](docs/EditsApi.md#androidpublisherEditsImagesDeleteall) | **DELETE** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsImagesList**](docs/EditsApi.md#androidpublisherEditsImagesList) | **GET** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsImagesUpload**](docs/EditsApi.md#androidpublisherEditsImagesUpload) | **POST** /{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsInsert**](docs/EditsApi.md#androidpublisherEditsInsert) | **POST** /{packageName}/edits | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsListingsDelete**](docs/EditsApi.md#androidpublisherEditsListingsDelete) | **DELETE** /{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsListingsDeleteall**](docs/EditsApi.md#androidpublisherEditsListingsDeleteall) | **DELETE** /{packageName}/edits/{editId}/listings | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsListingsGet**](docs/EditsApi.md#androidpublisherEditsListingsGet) | **GET** /{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsListingsList**](docs/EditsApi.md#androidpublisherEditsListingsList) | **GET** /{packageName}/edits/{editId}/listings | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsListingsPatch**](docs/EditsApi.md#androidpublisherEditsListingsPatch) | **PATCH** /{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsListingsUpdate**](docs/EditsApi.md#androidpublisherEditsListingsUpdate) | **PUT** /{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTestersGet**](docs/EditsApi.md#androidpublisherEditsTestersGet) | **GET** /{packageName}/edits/{editId}/testers/{track} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTestersPatch**](docs/EditsApi.md#androidpublisherEditsTestersPatch) | **PATCH** /{packageName}/edits/{editId}/testers/{track} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTestersUpdate**](docs/EditsApi.md#androidpublisherEditsTestersUpdate) | **PUT** /{packageName}/edits/{editId}/testers/{track} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTracksGet**](docs/EditsApi.md#androidpublisherEditsTracksGet) | **GET** /{packageName}/edits/{editId}/tracks/{track} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTracksList**](docs/EditsApi.md#androidpublisherEditsTracksList) | **GET** /{packageName}/edits/{editId}/tracks | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTracksPatch**](docs/EditsApi.md#androidpublisherEditsTracksPatch) | **PATCH** /{packageName}/edits/{editId}/tracks/{track} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsTracksUpdate**](docs/EditsApi.md#androidpublisherEditsTracksUpdate) | **PUT** /{packageName}/edits/{editId}/tracks/{track} | 
*GooglePlayDeveloper.EditsApi* | [**androidpublisherEditsValidate**](docs/EditsApi.md#androidpublisherEditsValidate) | **POST** /{packageName}/edits/{editId}:validate | 
*GooglePlayDeveloper.InappproductsApi* | [**androidpublisherInappproductsDelete**](docs/InappproductsApi.md#androidpublisherInappproductsDelete) | **DELETE** /{packageName}/inappproducts/{sku} | 
*GooglePlayDeveloper.InappproductsApi* | [**androidpublisherInappproductsGet**](docs/InappproductsApi.md#androidpublisherInappproductsGet) | **GET** /{packageName}/inappproducts/{sku} | 
*GooglePlayDeveloper.InappproductsApi* | [**androidpublisherInappproductsInsert**](docs/InappproductsApi.md#androidpublisherInappproductsInsert) | **POST** /{packageName}/inappproducts | 
*GooglePlayDeveloper.InappproductsApi* | [**androidpublisherInappproductsList**](docs/InappproductsApi.md#androidpublisherInappproductsList) | **GET** /{packageName}/inappproducts | 
*GooglePlayDeveloper.InappproductsApi* | [**androidpublisherInappproductsPatch**](docs/InappproductsApi.md#androidpublisherInappproductsPatch) | **PATCH** /{packageName}/inappproducts/{sku} | 
*GooglePlayDeveloper.InappproductsApi* | [**androidpublisherInappproductsUpdate**](docs/InappproductsApi.md#androidpublisherInappproductsUpdate) | **PUT** /{packageName}/inappproducts/{sku} | 
*GooglePlayDeveloper.OrdersApi* | [**androidpublisherOrdersRefund**](docs/OrdersApi.md#androidpublisherOrdersRefund) | **POST** /{packageName}/orders/{orderId}:refund | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesProductsGet**](docs/PurchasesApi.md#androidpublisherPurchasesProductsGet) | **GET** /{packageName}/purchases/products/{productId}/tokens/{token} | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsCancel**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsCancel) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:cancel | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsDefer**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsDefer) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:defer | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsGet**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsGet) | **GET** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token} | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRefund**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRefund) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:refund | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRevoke**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRevoke) | **POST** /{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:revoke | 
*GooglePlayDeveloper.PurchasesApi* | [**androidpublisherPurchasesVoidedpurchasesList**](docs/PurchasesApi.md#androidpublisherPurchasesVoidedpurchasesList) | **GET** /{packageName}/purchases/voidedpurchases | 
*GooglePlayDeveloper.ReviewsApi* | [**androidpublisherReviewsGet**](docs/ReviewsApi.md#androidpublisherReviewsGet) | **GET** /{packageName}/reviews/{reviewId} | 
*GooglePlayDeveloper.ReviewsApi* | [**androidpublisherReviewsList**](docs/ReviewsApi.md#androidpublisherReviewsList) | **GET** /{packageName}/reviews | 
*GooglePlayDeveloper.ReviewsApi* | [**androidpublisherReviewsReply**](docs/ReviewsApi.md#androidpublisherReviewsReply) | **POST** /{packageName}/reviews/{reviewId}:reply | 


## Documentation for Models

 - [GooglePlayDeveloper.Apk](docs/Apk.md)
 - [GooglePlayDeveloper.ApkBinary](docs/ApkBinary.md)
 - [GooglePlayDeveloper.ApkListing](docs/ApkListing.md)
 - [GooglePlayDeveloper.ApkListingsListResponse](docs/ApkListingsListResponse.md)
 - [GooglePlayDeveloper.ApksAddExternallyHostedRequest](docs/ApksAddExternallyHostedRequest.md)
 - [GooglePlayDeveloper.ApksAddExternallyHostedResponse](docs/ApksAddExternallyHostedResponse.md)
 - [GooglePlayDeveloper.ApksListResponse](docs/ApksListResponse.md)
 - [GooglePlayDeveloper.AppDetails](docs/AppDetails.md)
 - [GooglePlayDeveloper.AppEdit](docs/AppEdit.md)
 - [GooglePlayDeveloper.Bundle](docs/Bundle.md)
 - [GooglePlayDeveloper.BundlesListResponse](docs/BundlesListResponse.md)
 - [GooglePlayDeveloper.Comment](docs/Comment.md)
 - [GooglePlayDeveloper.DeobfuscationFile](docs/DeobfuscationFile.md)
 - [GooglePlayDeveloper.DeobfuscationFilesUploadResponse](docs/DeobfuscationFilesUploadResponse.md)
 - [GooglePlayDeveloper.DeveloperComment](docs/DeveloperComment.md)
 - [GooglePlayDeveloper.DeviceMetadata](docs/DeviceMetadata.md)
 - [GooglePlayDeveloper.ExpansionFile](docs/ExpansionFile.md)
 - [GooglePlayDeveloper.ExpansionFilesUploadResponse](docs/ExpansionFilesUploadResponse.md)
 - [GooglePlayDeveloper.ExternallyHostedApk](docs/ExternallyHostedApk.md)
 - [GooglePlayDeveloper.ExternallyHostedApkUsesPermission](docs/ExternallyHostedApkUsesPermission.md)
 - [GooglePlayDeveloper.Image](docs/Image.md)
 - [GooglePlayDeveloper.ImagesDeleteAllResponse](docs/ImagesDeleteAllResponse.md)
 - [GooglePlayDeveloper.ImagesListResponse](docs/ImagesListResponse.md)
 - [GooglePlayDeveloper.ImagesUploadResponse](docs/ImagesUploadResponse.md)
 - [GooglePlayDeveloper.InAppProduct](docs/InAppProduct.md)
 - [GooglePlayDeveloper.InAppProductListing](docs/InAppProductListing.md)
 - [GooglePlayDeveloper.InappproductsListResponse](docs/InappproductsListResponse.md)
 - [GooglePlayDeveloper.Listing](docs/Listing.md)
 - [GooglePlayDeveloper.ListingsListResponse](docs/ListingsListResponse.md)
 - [GooglePlayDeveloper.PageInfo](docs/PageInfo.md)
 - [GooglePlayDeveloper.Price](docs/Price.md)
 - [GooglePlayDeveloper.ProductPurchase](docs/ProductPurchase.md)
 - [GooglePlayDeveloper.Review](docs/Review.md)
 - [GooglePlayDeveloper.ReviewReplyResult](docs/ReviewReplyResult.md)
 - [GooglePlayDeveloper.ReviewsListResponse](docs/ReviewsListResponse.md)
 - [GooglePlayDeveloper.ReviewsReplyRequest](docs/ReviewsReplyRequest.md)
 - [GooglePlayDeveloper.ReviewsReplyResponse](docs/ReviewsReplyResponse.md)
 - [GooglePlayDeveloper.SubscriptionCancelSurveyResult](docs/SubscriptionCancelSurveyResult.md)
 - [GooglePlayDeveloper.SubscriptionDeferralInfo](docs/SubscriptionDeferralInfo.md)
 - [GooglePlayDeveloper.SubscriptionPriceChange](docs/SubscriptionPriceChange.md)
 - [GooglePlayDeveloper.SubscriptionPurchase](docs/SubscriptionPurchase.md)
 - [GooglePlayDeveloper.SubscriptionPurchasesDeferRequest](docs/SubscriptionPurchasesDeferRequest.md)
 - [GooglePlayDeveloper.SubscriptionPurchasesDeferResponse](docs/SubscriptionPurchasesDeferResponse.md)
 - [GooglePlayDeveloper.Testers](docs/Testers.md)
 - [GooglePlayDeveloper.Timestamp](docs/Timestamp.md)
 - [GooglePlayDeveloper.TokenPagination](docs/TokenPagination.md)
 - [GooglePlayDeveloper.Track](docs/Track.md)
 - [GooglePlayDeveloper.TracksListResponse](docs/TracksListResponse.md)
 - [GooglePlayDeveloper.UserComment](docs/UserComment.md)
 - [GooglePlayDeveloper.VoidedPurchase](docs/VoidedPurchase.md)
 - [GooglePlayDeveloper.VoidedPurchasesListResponse](docs/VoidedPurchasesListResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account

